Letting the user define the expiration time that will prompt the lock screen

--- a/spec/javascripts/fixtures/screen-view.html
+++ b/spec/javascripts/fixtures/screen-view.html
@@ -1,4 +1,5 @@
-<div class="cross-lockable-screen" data-cross-lockable-origin="http://localhost:8888">
+<div class="cross-lockable-screen" data-cross-lockable-origin="http://localhost:8888" data-cross-lockable-expiration-time="1800000">
+
   <div class="cross-lockable-screen-box"></div>
 
   <script type="text/html" data-template-name="cross-lockable-screen">
